--- a/packaging/docker/Dockerfile.alpine
+++ b/packaging/docker/Dockerfile.alpine
@@ -57,7 +57,7 @@ RUN --mount=type=cache,target=/var/cache/apk \
     apk add \
         bash \
         ca-certificates \
-        curl \
+        libcurl \
         openssl \
         tar \
         xz \
